fix: color contrast and unique id key

--- a/src/features/calculations/comboInput.module.scss
+++ b/src/features/calculations/comboInput.module.scss
@@ -12,7 +12,7 @@ input {
   font-size: 12px;
   width: 100%;
   height: 30px;
-  border: 1px solid $lightBackground;
+  border: 1.9px solid $lightBackground;
   border-radius: 4px;
   margin-right: 5px;
 }
